# blobsy-aggregator

./: Cargo.toml  LICENSE-MIT  README.md
.github/: CODEOWNERS
html/: index.html  styles.css
solidity/: foundry.toml
solidity/src/: BlobSplitter.sol
src/: lib.rs
src/abi/: BlobSplitter.json  IBlobReceiver.json
src/building/: appending_blob_aggregator.rs  blob_aggregator.rs  mod.rs  partial_blob.rs
src/chain/: mod.rs  new_heads_subscription.rs
src/primitives/: blob_segment.rs  mod.rs
src/rpc/: mod.rs  rpc_server.rs  serialize.rs
src/submission/: mod.rs  optimized_blob_coder.rs  rpc_submitter.rs
