[package]
name = "blobsy-aggregator"
version = "0.1.0"
edition = "2021"

[dependencies]
derivative = { version = "2.2.0" }
eyre = { version = "0.6.12" }
futures = { version = "0.3.31" }
integer-encoding = { version = "4.0.2" }
jsonrpsee = { version = "0.24.8", features = ["full"] }
serde = { version = "1.0.218", features = ["derive"] }
sha2 = { version = "0.10.8" }
time = { version = "0.3.38" }
tokio = { version = "1.43.0" }
tokio-util = { version = "0.7.13" }
tracing = { version = "0.1.41" }
tracing-subscriber = { version = "0.3.19" }
uuid = { version = "1.15.1", features = ["serde", "v5", "v4"] }



alloy-eips = { version = "0.11.1", features = ["kzg"] }
alloy-primitives = { version = "0.8.22", default-features = false }
alloy-provider = { version = "0.11.1", features = ["ws"] }
alloy-rpc-types-eth = { version = "0.11.1" }
alloy-signer-local = { version = "0.11.1" }
alloy-sol-types = { version = "0.8.22", features = ["json"] }
alloy-transport = { version = "0.11.1" }
alloy-transport-ws = { version = "0.11.1" }
